@@ -1,3 +1,5 @@
+* Alert when an activity cannot be saved. (rwh)
+
 Snapshot 47e231311b
 
 * Get rid of sound competely to be sure we don't block the device. (marco)
